details_dump2.txt
[eval]:1
const f=require('fs').readFileSync('frontend/app/details/[type]/[id].tsx','utf8').split('\n');const findAll=(re)=>{const out=[];for(let i=0;i<f.length;i++)if(re.test(f[i]))out.push(i);return out};const dump=(label,s,e)=>{console.log('\n===',label,'(lines',s+1,'-',e+1,')===');for(let i=s;i<=e&&i<f.length;i++)console.log((i+1).toString().padStart(4)+': '+f[i])};[['router.push/replace',/router\\.(push|replace)/],['pathname player',/pathname.*player|\\/player/],['nextEpisodeData usage',/nextEpisodeData/],['autoplay overlay',/autoplay|autoPlay|countdown|Next.up|UpNext/i],['BackHandler logic',/BackHandler\\.(addEventListener|exitApp|removeEventListener)/],['focus effect',/useFocusEffect/],['loading return',/if.*loading.*return|return.*Loading|<Loading/]].forEach(([n,re])=>{const ls=findAll(re);console.log('\n>>>',n,'matches:',ls.map(x=>x+1).slice(0,8));ls.slice(0,3).forEach(l=>dump(n+'@'+(l+1),Math.max(0,l-3),Math.min(f.length-1,l+20)))});
                                                                                                                                                                                                                                                                                                                                                                                                                                                ^
Expression expected

SyntaxError: Invalid regular expression flags
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.13.1
Assertion failed: !(handle->flags & UV_HANDLE_CLOSING), file src\win\async.c, line 76
